# vampires_bot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  app.py  backlog.txt  bot.db  commands.py  config.py  excel_import.py  excel_templates.py  google_sheets_export.py  google_sheets_import.py  logging_config.py  pyproject.toml  send_ask_answers.py  send_sheet_notifications.py  sync_news_sheets.py  sync_rituals.py
alembic/: env.py
config/: combat_rates.json
db/: config.py  models.py  session.py
keyboards/: presets.py  presets_actions_stats.py  renderer.py  spec.py
middlewares/: timing.py  user_registration.py
options/: action_setup_menu.py  actions_menu.py  actions_stats.py  communicate.py  district_action_list_menu.py  district_list_menu.py  main_menu.py  news_list.py  politician_list.py  registry.py  scout_menu.py  win_lose.py
routes/: __init__.py  admin_commands.py  admin_set_owner.py  options.py  start.py  start_support.py  universal.py
screens/: __init__.py  actions.py  actions_stats.py  base.py  communicate_screen.py  defend_action.py  district_list.py  main_menu.py  news_list.py  notify_screen.py  politician_list.py  profile.py  registration_screen.py  ritual_screen.py  scout_action.py  scout_info_screen.py  settings_action.py
services/: message_store.py  notify.py
states/: communicate.py  registration.py  ritual.py  scout.py
text_handlers/: __init__.py  communicate.py  register_name.py  ritual.py  scout_info.py
utils/: ask_and_answer.py  callback.py  get_last_cycle_finished.py  news_to_print.py  raw_body_input.py  render.py  rituals.py
(+40 files in other folders)
